--- a/preamble.html
+++ b/preamble.html
@@ -197,27 +197,27 @@
 
             <p>
 
-                Inspired by the success of my 2019 online 
-                interactive book 
+                Inspired by the success of my 2019 online
+                interactive book
                 <a href="https://complex-analysis.com/" target="_blank">Visual Complex Analysis</a>,
-                and supported by my patrons on 
+                and supported by my patrons on
                 <a href="https://www.patreon.com/jcponce" target="_blank">Patreon</a>,
-                I decided 
+                I decided
                 to create this book on vector
-                calculus. It brings together the applets 
-                I have developed over the years, 
+                calculus. It brings together the applets
+                I have developed over the years,
                 offering a collection of high-quality,
-                interactive learning materials. My goal is 
-                to make mathematical concepts more 
+                interactive learning materials. My goal is
+                to make mathematical concepts more
                 engaging and insightful
                 for learners at all levels.
             </p>
 
             <p>
 
-                This book is completely <strong>free</strong> to access, 
+                This book is completely <strong>free</strong> to access,
                 with no distracting ads —just high-quality mathematical
-                learning experiences. 
+                learning experiences.
                 If you would like to support this project, you can do it using the following links:
             </p>
 
@@ -339,8 +339,8 @@
                     That's it! Now you can click on the same text again to
                     hide me!
                     <picture>
-                        <source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f98e/512.webp" type="image/webp">
-                        <img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f98e/512.gif" alt="🦎" width="32" height="32">
+                        <source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f41d/512.webp" type="image/webp">
+                        <img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f41d/512.gif" alt="🐝" width="32" height="32">
                     </picture>
                 </p>
             </details>
@@ -421,13 +421,22 @@
                 <li>
                     <a href="https://github.com/magicbookproject" target="_blank">Magic Book project</a>.
                 </li>
+                <li>
+                    <a href="https://googlefonts.github.io/noto-emoji-animation/" target="_blank">Animated Emoji</a>.
+                    <picture>
+                        <source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f98e/512.webp" type="image/webp">
+                        <img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f98e/512.gif" alt="🦎" width="32" height="32">
+                    </picture>
+                </li>
             </ul>
 
             <p>Many thanks also to:</p>
 
             <ul>
-                <li>The <a href="https://www.geogebra.org/" target="_blank">GeoGebra</a> developers and community who
-                    share their wonderful constructions and applets.</li>
+                <li>The <a href="https://www.geogebra.org/" target="_blank">GeoGebra</a> developers and
+                    <a href="https://www.reddit.com/r/geogebra/" target="_blank">community</a> who
+                    share their wonderful constructions and applets.
+                </li>
                 <li><a href="https://lauren-mccarthy.com/Info" target="_blank">Lauren McCarthy</a>, the creator of <a href="https://p5js.org/" target="_blank">p5.js</a>, and to the great community of creative
                     people who use this programming language.</li>
                 <li><a href="https://thecodingtrain.com/" target="_blank">Daniel Shiffman</a>, an amazing teacher who
@@ -439,8 +448,15 @@
                 </li>
                 <li><a href="https://github.com/mrdoob" target="_blank">Ricardo Cabello (Mr.doob)</a>, the creator of <a href="https://threejs.org/" target="_blank">Three.js</a>,
                     and to the great community of creative people who use this JavaScript library.</li>
-
-                <li><a href="https://paulmasson.github.io/" target="_blank">Paul Masson</a>, the creator of <a href="http://mathcell.org/" target="_blank">MathCell</a>. This is JavaScript library for
+                <li><a href="https://github.com/ChristopherChudzicki" target="_blank">Christopher Chudzicki</a>, the
+                    creator of <a href="https://www.math3d.org/" target="_blank">Math3D</a>, a user-friendly 3d graphing
+                    calculator for the web. Create, share, and animate 3d
+                    mathematical scenes.</li>
+                <li>The <a href="https://www.desmos.com/" target="_blank">Desmos</a> developers and
+                    <a href="https://www.reddit.com/r/desmos/" target="_blank">community</a> who share their wonderful
+                    constructions and graphs.
+                </li>
+                <li><a href="https://paulmasson.github.io/" target="_blank">Paul Masson</a>, the creator of <a href="http://mathcell.org/" target="_blank">MathCell</a>. This is a JavaScript library for
                     including interactive mathematics in a web browser.</li>
 
             </ul>
@@ -505,8 +521,8 @@
                         touch</strong></a>.
             </p>
 
-            
-            
+
+
 
             <br>
 
