--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 <body data-type="book" id="top">
 
- 
+
 
   <div class="w3-main w3-large" style="margin-left:250px;">
 
@@ -138,10 +138,14 @@
                 <h4 class="w3-hide-large w3-hide-medium text" style="font-size:16px">Juan Carlos <br> Ponce Campuzano
                 </h4>
 
+                
+
 
             </div>
 
-
+            <div class="arrow-container">
+                <p class="text"><i class="fa-solid fa-arrow-down"></i></p>
+            </div>
 
         </div>
 
@@ -186,7 +190,7 @@
                 integrals, among other topics,
                 through engaging simulations.
                 These applets are built using open-source
-                tools such as <strong>GeoGebra, Desmos, p5.js,
+                tools such as <strong>GeoGebra, Desmos, Math3D, p5.js,
                     Three.js, MathBox,</strong> and
                 <strong>MathCell.js</strong>.
             </p>
@@ -254,7 +258,7 @@
 </section>
     </div>
 
-   
+  
     <br />
 
     <!-- Footer -->
