--- a/integrals-over-paths-and-surfaces.html
+++ b/integrals-over-paths-and-surfaces.html
@@ -1484,7 +1484,7 @@
         </p>
         <div class="eqwrapper">
           \[
-          \bigg(\r_u\times \r_v\big|_{(1,1)} \bigg)\cdot \big((x~\i+y~\j+z~\k) -( \i+\j+3~\k)\big)=0,
+          \bigg(\r_u\times \r_v\big|_{(1,1)} \bigg)\pd \big((x~\i+y~\j+z~\k) -( \i+\j+3~\k)\big)=0,
           \]
         </div>
         <p>
