--- a/preamble.html
+++ b/preamble.html
@@ -367,7 +367,7 @@
             </p>
 
 
-            <p><strong>That's it!</strong> Are you ready to get started, skip ahead to
+            <p><strong>That's it!</strong> Are you ready to get started? Skip ahead to
                 <a href="vectors-and-the-geometry-of-space.html">Chapter 1</a>
                 <picture>
                     <source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f996/512.webp" type="image/webp">
