--- a/index.html
+++ b/index.html
@@ -111,7 +111,6 @@
 
 
 
-
     <!-- Starts main content -->
 
     <!-- !PAGE CONTENT! -->
@@ -121,7 +120,7 @@
     <!-- Sections -->
     <div class="w3-container cover">
 
-        <div class="w3-display-container front" style="height: 100vh;">
+        <div class="w3-display-container w3-mobile front" style="height: 100vh;">
 
             <div class="w3-padding w3-display-middle">
                 <div class="w3-hide-large w3-hide-medium w3-hide-small">
@@ -138,13 +137,10 @@
                 <h4 class="w3-hide-large w3-hide-medium text" style="font-size:16px">Juan Carlos <br> Ponce Campuzano
                 </h4>
 
-                
-
-
             </div>
 
-            <div class="arrow-container">
-                <p class="text"><i class="fa-solid fa-arrow-down"></i></p>
+            <div class="arrow-container w3-padding-large w3-display-bottommiddle">
+                    <p class="text"><i class="fa-solid fa-arrow-down"></i></p>
             </div>
 
         </div>
@@ -258,7 +254,6 @@
 </section>
     </div>
 
-  
     <br />
 
     <!-- Footer -->
