--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
             </div>
 
-            <div class="arrow-container w3-padding-large w3-display-bottommiddle">
+            <div class="arrow-container w3-hide-small w3-padding-large w3-display-bottommiddle">
                     <p class="text"><i class="fa-solid fa-arrow-down"></i></p>
             </div>
 
