--- a/preamble.html
+++ b/preamble.html
@@ -367,12 +367,14 @@
             </p>
 
 
-            <p><strong>That's it!</strong> Are you ready to get started? Skip ahead to
-                <a href="vectors-and-the-geometry-of-space.html">Chapter 1</a>
+            <p><strong>That's it!</strong> Ready to get started?  
                 <picture>
                     <source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f996/512.webp" type="image/webp">
                     <img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f996/512.gif" alt="🦖" width="32" height="32">
                 </picture>
+                Skip ahead to
+                <a href="vectors-and-the-geometry-of-space.html">Chapter 1</a>
+                
             </p>
 
 
