--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                 <i class="fa-regular fa-sun"></i>
             </span>
 
-            <h2>Welcome to Vector Calculus</h2>
+            <h2>Welcome</h2>
 
             <p>
                 Vector Calculus is a powerful branch of mathematics that extends traditional calculus into multiple
