--- a/preamble.html
+++ b/preamble.html
@@ -251,7 +251,13 @@
             </iframe>
 
 
-            <h3>A warning about using computers</h3>
+            <h3>
+                A warning about using computers
+                <picture>
+                    <source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/2757/512.webp" type="image/webp">
+                    <img src="https://fonts.gstatic.com/s/e/notoemoji/latest/2757/512.gif" alt="❗" width="32" height="32">
+                </picture>
+            </h3>
 
             <p>
                 While I advocate for using computers to
