--- a/vectors-and-the-geometry-of-space.html
+++ b/vectors-and-the-geometry-of-space.html
@@ -2399,7 +2399,7 @@
         In the applet below, you can see how vectors
         are used in a collision simulation,
         where the direction and magnitude of
-        velocities are calculated, before and after the collision,
+        velocities are calculated, before and after the collision.
       </p>
 
       <iframe loading="lazy" frameborder="0" height="450px" noscrolling="" src="applets/js/physics-sim" style="border: 0px solid black; overflow: hidden;" width="100%">
