--- a/preamble.html
+++ b/preamble.html
@@ -311,7 +311,7 @@
             </div>
 
             <p>
-                To hide the navigation bar, just
+                To hide the menu on the left, just
                 adjust the width of your browser. Or zoom in
                 with the keyboard combination:
             </p>
