--- a/preamble.html
+++ b/preamble.html
@@ -311,13 +311,13 @@
             </div>
 
             <p>
-                To hide the menu on the left, just
+                To hide the navigation bar, just
                 adjust the width of your browser. Or zoom in
                 with the keyboard combination:
             </p>
             <ul>
-                <li>Mac: <code>Command</code> + <code>+</code></li>
-                <li>Windows: <code>Control</code> + <code>+</code></li>
+                <li>Mac: <code class="boxKey">Command</code> + <code class="boxKey">+</code></li>
+                <li>Windows: <code class="boxKey">Control</code> + <code class="boxKey">+</code></li>
             </ul>
 
 
