--- a/index.html
+++ b/index.html
@@ -57,7 +57,6 @@
 <body data-type="book" id="top">
 
 
-
   <div class="w3-main w3-large" style="margin-left:250px;">
 
 
@@ -140,7 +139,9 @@
             </div>
 
             <div class="arrow-container w3-hide-small">
+                <div class="arrow-bounce">
                     <p class="text"><i class="fa-solid fa-arrow-down"></i></p>
+                </div>
             </div>
 
         </div>
@@ -254,6 +255,7 @@
 </section>
     </div>
 
+   
     <br />
 
     <!-- Footer -->
