--- a/preamble.html
+++ b/preamble.html
@@ -247,7 +247,7 @@
                 </picture>
             </p>
 
-            <iframe loading="lazy" src="applets/threejs/gravity-updated/" style="width: 100%; height: 350px; border: 0;" noscrolling="">
+            <iframe  src="applets/threejs/gravity-updated/" style="width: 100%; height: 350px; border: 0;" noscrolling="">
             </iframe>
 
 
@@ -532,7 +532,7 @@
 
             <br>
 
-            <iframe loading="lazy" src="applets/p5js/flow-field-no-particles" style="width: 100%; height: 350px; border: 0;" noscrolling="">
+            <iframe  src="applets/p5js/flow-field-no-particles" style="width: 100%; height: 350px; border: 0;" noscrolling="">
             </iframe>
 
             <br>
