--- a/applets/threejs/gravity/index.html
+++ b/applets/threejs/gravity/index.html
@@ -48,7 +48,7 @@
   </div>
 
   <!-- Link with Expand Icon -->
-  <a href="applets/threejs/gravity" target="_blank" class="expand-link">
+  <a href="/" target="_blank" class="expand-link">
     <i class="fa-solid fa-expand"></i>
   </a>
 
