--- a/applets/threejs/gravity/index.html
+++ b/applets/threejs/gravity/index.html
@@ -48,9 +48,10 @@
   </div>
 
   <!-- Link with Expand Icon -->
-  <a href="/" target="_blank" class="expand-link">
+   <!-- Link with Expand Icon -->
+   <a href="https://example.com" id="expand-btn" class="expand-link">
     <i class="fa-solid fa-expand"></i>
-  </a>
+</a>
 
 
 
@@ -58,6 +59,28 @@
 
 
   <script>
+     function toggleExpandButton() {
+            const expandBtn = document.getElementById("expand-btn");
+
+            // Check if inside an iframe
+            const inIframe = window !== window.parent;
+
+            // Get iframe height (only works if same-origin policy allows it)
+            const iframeHeight = inIframe ? window.innerHeight : 0;
+
+            if (inIframe && iframeHeight >= 350) {
+                expandBtn.style.display = "flex";
+            } else {
+                expandBtn.style.display = "none";
+            }
+        }
+
+        // Run on load and resize
+        window.addEventListener("load", toggleExpandButton);
+        window.addEventListener("resize", toggleExpandButton);
+
+
+
     document.addEventListener("keydown", (event) => {
       if (event.key.toLowerCase() === "f") {
         if (!document.fullscreenElement) {
