--- a/applets/threejs/gravity/index.html
+++ b/applets/threejs/gravity/index.html
@@ -49,7 +49,7 @@
 
   <!-- Link with Expand Icon -->
    <!-- Link with Expand Icon -->
-   <a href="https://example.com" id="expand-btn" class="expand-link">
+   <a href="applets/threejs/gravity" id="expand-btn" class="expand-link">
     <i class="fa-solid fa-expand"></i>
 </a>
 
