--- a/applets/threejs/gravity/index.html
+++ b/applets/threejs/gravity/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
   <title>Gravity (three.js / instancing / glsl)</title>
   <link rel="stylesheet" href="style.css">
 
