--- a/preamble.html
+++ b/preamble.html
@@ -247,8 +247,11 @@
                 </picture>
             </p>
 
-            <iframe  src="applets/threejs/gravity/" style="width: 100%; height: 350px; border: 0;" noscrolling="">
+            <iframe src="applets/threejs/gravity/" style="width: 100%; height: 350px; border: 0;" noscrolling="">
             </iframe>
+            <div style="text-align: right; padding: 0px;margin-top: -5px;">
+                <a target="_blank" href="https://vector-calculus.github.io/applets/threejs/gravity/"><i class="fa-solid fa-expand"></i></a>
+            </div>
 
 
             <h3>
@@ -532,7 +535,7 @@
 
             <br>
 
-            <iframe  src="applets/p5js/flow-field-no-particles" style="width: 100%; height: 300px; border: 0;" noscrolling="">
+            <iframe src="applets/p5js/flow-field-no-particles" style="width: 100%; height: 300px; border: 0;" noscrolling="">
             </iframe>
 
             <br>
