--- a/applets/threejs/gravity/index.html
+++ b/applets/threejs/gravity/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 
 <head>
-  
+
   <meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+  <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 
   <title>Gravity (three.js / instancing / glsl)</title>
   <link rel="stylesheet" href="style.css">
@@ -34,6 +34,9 @@
 
 -->
   <!-- partial -->
+
+  <canvas class="webgl"></canvas>
+
   <div class="container">
     <div class="sticky">
       <p>
