--- a/integrals-over-paths-and-surfaces.html
+++ b/integrals-over-paths-and-surfaces.html
@@ -890,17 +890,8 @@
         \[
         \int_a^bf(x)~dx = F(b)-F(a),
         \]
-        by the
-        <span class="infotip">
-          <strong id="toggleButton">fundamental theorem of calculus 📃</strong>.
-          <span id="myinfo">
-            If $f$ is continuous over the interval $[a,b]$ and $F(x)$
-            is any antiderivative of $f(x),$ then
-            \[
-            \int_a^bf(x)\,dx = F(b)-F(a).
-            \]
-          </span>
-        </span> Thus the value of the integral
+        by the <strong>fundamental theorem of calculus</strong>. Thus 
+        the value of the integral
         of $f$ depends only on the value of $F$ at the
         end points of the interval $[a,b].$
       </p>
