--- a/preamble.html
+++ b/preamble.html
@@ -535,8 +535,9 @@
 
             <br>
 
-            <iframe src="applets/p5js/flow-field-no-particles" style="width: 100%; height: 300px; border: 0;" noscrolling="">
-            </iframe>
+            <div style="text-align: center;">
+                <img style="width: 55%" src="imgs/inf-loop-animation.gif">
+            </div>
 
             <br>
 
