--- a/applets/threejs/parametric-surfaces-gallery/sphere.html
+++ b/applets/threejs/parametric-surfaces-gallery/sphere.html
@@ -2,19 +2,19 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Parametric Surface - Sphere</title>
-    <link rel="stylesheet" href="./style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Parametric Surface - Sphere</title>
+  <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
-    <canvas class="webgl"></canvas>
-    <script src="https://cdn.jsdelivr.net/npm/lil-gui@0.18"></script>
-    <!-- using three.js -->
-    <script async src="https://ga.jspm.io/npm:es-module-shims@1.6.3/dist/es-module-shims.js"
-        crossorigin="anonymous"></script>
-    <script type="importmap">
+  <canvas class="webgl"></canvas>
+  <script src="https://cdn.jsdelivr.net/npm/lil-gui@0.18"></script>
+  <!-- using three.js -->
+  <script async src="https://ga.jspm.io/npm:es-module-shims@1.6.3/dist/es-module-shims.js"
+    crossorigin="anonymous"></script>
+  <script type="importmap">
   {
     "imports": {      
       "three": "https://unpkg.com/three@0.174.0/build/three.module.js",
@@ -22,7 +22,125 @@
     }
   }
 </script>
-    <script type="module" src="./script.js"></script>
+  <script type="module">
+
+    import * as THREE from 'three';
+    import { OrbitControls } from "three/addons/controls/OrbitControls.js";
+    import { ParametricGeometry } from 'three/addons/geometries/ParametricGeometry.js';
+    import { GUI } from 'three/addons/libs/lil-gui.module.min.js';
+
+    // GUI setup
+    const gui = new GUI();
+    const options = {
+      material: 'Matcap', // Default material
+      wireframe: false,    // Default wireframe state
+      r: 1,
+    };
+
+    /**
+     * Base
+     */
+    const canvas = document.querySelector('canvas.webgl');
+    const scene = new THREE.Scene();
+
+    /**
+     * Sphere as a Parametric Surface
+     */
+    function parametricSphere(u, v, target) {
+      const theta = u * Math.PI * 2;
+      const phi = v * Math.PI;
+      const r = options.r;
+      const x = r * Math.sin(phi) * Math.cos(theta);
+      const y = r * Math.sin(phi) * Math.sin(theta);
+      const z = r * Math.cos(phi);
+      target.set(x, y, z);
+    }
+
+    let geometry = new ParametricGeometry(parametricSphere, 50, 50);
+    geometry.rotateX(-Math.PI / 2);
+
+    // Load MatCap texture
+    const textureLoader = new THREE.TextureLoader();
+    const matcapTexture = textureLoader.load('static/textures/matcaps/3.png');
+
+    // Define materials
+    const matcapMaterial = new THREE.MeshMatcapMaterial({ matcap: matcapTexture, side: THREE.DoubleSide });
+    const normalMaterial = new THREE.MeshNormalMaterial({ side: THREE.DoubleSide });
+
+    let mesh = new THREE.Mesh(geometry, matcapMaterial);
+    scene.add(mesh);
+
+    /**
+     * Sizes
+     */
+    const sizes = {
+      width: window.innerWidth,
+      height: window.innerHeight
+    };
+
+    window.addEventListener('resize', () => {
+      sizes.width = window.innerWidth;
+      sizes.height = window.innerHeight;
+      camera.aspect = sizes.width / sizes.height;
+      camera.updateProjectionMatrix();
+      renderer.setSize(sizes.width, sizes.height);
+      renderer.setPixelRatio(Math.min(window.devicePixelRatio, 2));
+    });
+
+    /**
+     * Camera
+     */
+    const camera = new THREE.PerspectiveCamera(75, sizes.width / sizes.height, 0.1, 100);
+    camera.position.set(1, 1, 3);
+    scene.add(camera);
+
+    // Controls
+    const controls = new OrbitControls(camera, canvas);
+    controls.enableDamping = true;
+
+    // Add material toggle dropdown
+    gui.add(options, 'material', ['Matcap', 'Normal']).name('Style').onChange((value) => {
+      mesh.material = value === 'Matcap' ? matcapMaterial : normalMaterial;
+      mesh.material.wireframe = options.wireframe; // Keep wireframe state
+    });
+
+    // Add wireframe toggle
+    gui.add(options, 'wireframe').name('Frame').onChange((value) => {
+      mesh.material.wireframe = value;
+    });
+
+    // Add parameter
+    gui.add(options, 'r', 0.01, 2, 0.01).onChange(() => {
+      // Regenerate geometry with the new 'a' value
+      geometry.dispose(); // Dispose of the old geometry to free up memory
+      geometry = new ParametricGeometry(parametricSphere, 50, 50);
+      geometry.rotateX(-Math.PI / 2);
+
+      // Update the mesh with the new geometry
+      mesh.geometry = geometry;
+    });
+
+    gui.close();
+
+    /**
+     * Renderer
+     */
+    const renderer = new THREE.WebGLRenderer({ canvas: canvas, antialias: true });
+    renderer.setSize(sizes.width, sizes.height);
+    renderer.setPixelRatio(Math.min(window.devicePixelRatio, 2));
+
+    /**
+     * Animate
+     */
+    const tick = () => {
+      controls.update();
+      renderer.render(scene, camera);
+      window.requestAnimationFrame(tick);
+    };
+
+    tick();
+
+  </script>
 </body>
 
 </html>
