--- a/applets/threejs/parametric-surfaces-gallery/pinecone.html
+++ b/applets/threejs/parametric-surfaces-gallery/pinecone.html
@@ -43,7 +43,7 @@
     const canvas = document.querySelector('canvas.webgl');
     const scene = new THREE.Scene();
 
-    // **Cylinder Surface**
+    // **Pinecone Surface**
     function parametricFunc(u, v, target) {
       u = u * Math.PI * 1;
       v = v * Math.PI * 17;
