--- a/applets/threejs/parametric-surfaces-gallery/apple.html
+++ b/applets/threejs/parametric-surfaces-gallery/apple.html
@@ -43,7 +43,7 @@
     const canvas = document.querySelector('canvas.webgl');
     const scene = new THREE.Scene();
 
-    // **Cylinder Surface**
+    // **Apple Surface**
     function parametricFunc(u, v, target) {
       u = 2 * Math.PI * u;
       v = 2 * Math.PI * v - Math.PI;
