--- a/applets/threejs/parametric-surfaces-gallery/plane.html
+++ b/applets/threejs/parametric-surfaces-gallery/plane.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Parametric Surface - Seashell</title>
+  <title>Parametric surface - Cylinder</title>
   <link rel="stylesheet" href="./style.css">
 </head>
 
@@ -34,7 +34,7 @@
     const options = {
       material: 'Matcap', // Default material
       wireframe: false,    // Default wireframe state
-      a: 13,
+      h: 1,
     };
 
     /**
@@ -43,21 +43,23 @@
     const canvas = document.querySelector('canvas.webgl');
     const scene = new THREE.Scene();
 
-    // **Sea Shell Surface**
+    // **Plane Surface**
     function parametricFunc(u, v, target) {
-      u *= 20;
-      v *= 2 * Math.PI;
-      const f = Math.exp(u / (Math.PI * 6 * 1)) - 1;
+      u = 3 * u - 1.5;
+      v = 3 * v - 1.5;
+
       const scale = 0.4;
-      let x = scale * ( 2 * f * Math.cos(u) * Math.cos(v / 2) * Math.cos(v / 2));
-      let y = scale * ( 2 * (-f) * Math.sin(u) * Math.cos(v / 2) * Math.cos(v / 2));
-      let z = scale * ( 4 - Math.exp(u / (options.a)) - Math.sin(v) + Math.exp(u / (Math.PI * 6 * 1)) * Math.sin(v));
+      let x = scale * (1.5 * u - 1.0 * v + 1.0);
+      let y = scale * (1.0 * u + 1.0 * v + 0.5);
+      let z = scale * (1.0 * u + 1.0 * v + 1.0);
+
       target.set(x, y, z);
     }
 
-    let geometry = new ParametricGeometry(parametricFunc, 100, 60);
+
+    let geometry = new ParametricGeometry(parametricFunc, 32, 32);
     geometry.rotateX(-Math.PI / 2);
-    geometry.rotateY(Math.PI / 4);
+    //geometry.scale(1, 1, 1);
 
     // Load MatCap texture
     const textureLoader = new THREE.TextureLoader();
@@ -110,16 +112,16 @@
     });
 
     // Add parameter
-    gui.add(options, 'a', 8, 18, 0.01).onChange(() => {
-      // Regenerate geometry with the new 'a' value
-      geometry.dispose(); // Dispose of the old geometry to free up memory
-      geometry = new ParametricGeometry(parametricFunc, 100, 60);
-      geometry.rotateX(-Math.PI / 2);
-      geometry.rotateY(Math.PI / 4);
+    // gui.add(options, 'h', 0, 3, 0.01).onChange(() => {
+    //   // Regenerate geometry with the new 'a' value
+    //   geometry.dispose(); // Dispose of the old geometry to free up memory
+    //   geometry = new ParametricGeometry(parametricFunc, 100, 60);
+    //   geometry.rotateX(-Math.PI / 4);
+    //   geometry.scale(0.12, 0.12, 0.12);
 
-      // Update the mesh with the new geometry
-      mesh.geometry = geometry;
-    });
+    //   // Update the mesh with the new geometry
+    //   mesh.geometry = geometry;
+    // });
 
     gui.close();
 
@@ -140,7 +142,6 @@
     };
 
     tick();
-
 
   </script>
 </body>
