--- a/parametric-surfaces-gallery/index.html
+++ b/parametric-surfaces-gallery/index.html
@@ -13,6 +13,16 @@
 
 		<link rel="stylesheet" type="text/css" href="lib/offline-v2.css">
 
+		<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-F0V5C760K4"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag() { dataLayer.push(arguments); }
+		  gtag('js', new Date());
+	  
+		  gtag('config', 'G-F0V5C760K4');
+		</script>
+
 
 
 	</head>
