--- a/applets/threejs/parametric-surfaces-gallery/plane.html
+++ b/applets/threejs/parametric-surfaces-gallery/plane.html
@@ -99,6 +99,8 @@
     // Controls
     const controls = new OrbitControls(camera, canvas);
     controls.enableDamping = true;
+    controls.autoRotate = true;
+    controls.autoRotateSpeed = - 0.2;
 
     // Add material toggle dropdown
     gui.add(options, 'material', ['Matcap', 'Normal']).name('Style').onChange((value) => {
