--- a/applets/threejs/parametric-surfaces-gallery/seashell.html
+++ b/applets/threejs/parametric-surfaces-gallery/seashell.html
@@ -49,15 +49,15 @@
       v *= 2 * Math.PI;
       const f = Math.exp(u / (Math.PI * 6 * 1)) - 1;
       const scale = 0.4;
-      let x = scale * ( 2 * f * Math.cos(u) * Math.cos(v / 2) * Math.cos(v / 2));
-      let y = scale * ( 2 * (-f) * Math.sin(u) * Math.cos(v / 2) * Math.cos(v / 2));
-      let z = scale * ( 4 - Math.exp(u / (options.a)) - Math.sin(v) + Math.exp(u / (Math.PI * 6 * 1)) * Math.sin(v));
+      let x = scale * (2 * f * Math.cos(u) * Math.cos(v / 2) * Math.cos(v / 2));
+      let y = scale * (2 * (-f) * Math.sin(u) * Math.cos(v / 2) * Math.cos(v / 2));
+      let z = scale * (4 - Math.exp(u / (options.a)) - Math.sin(v) + Math.exp(u / (Math.PI * 6 * 1)) * Math.sin(v));
       target.set(x, y, z);
     }
 
     let geometry = new ParametricGeometry(parametricFunc, 100, 60);
-    geometry.rotateX(-Math.PI / 2);
-    geometry.rotateY(Math.PI / 4);
+    geometry.rotateX(-Math.PI / 2.2);
+    geometry.rotateY(Math.PI / 8);
 
     // Load MatCap texture
     const textureLoader = new THREE.TextureLoader();
@@ -97,6 +97,8 @@
     // Controls
     const controls = new OrbitControls(camera, canvas);
     controls.enableDamping = true;
+    controls.autoRotate = true;
+    controls.autoRotateSpeed = - 0.2;
 
     // Add material toggle dropdown
     gui.add(options, 'material', ['Matcap', 'Normal']).name('Style').onChange((value) => {
@@ -114,8 +116,8 @@
       // Regenerate geometry with the new 'a' value
       geometry.dispose(); // Dispose of the old geometry to free up memory
       geometry = new ParametricGeometry(parametricFunc, 100, 60);
-      geometry.rotateX(-Math.PI / 2);
-      geometry.rotateY(Math.PI / 4);
+      geometry.rotateX(-Math.PI / 2.2);
+      geometry.rotateY(Math.PI / 8);
 
       // Update the mesh with the new geometry
       mesh.geometry = geometry;
