--- a/parametric-surfaces-gallery/index.html
+++ b/parametric-surfaces-gallery/index.html
@@ -13,16 +13,6 @@
 
 		<link rel="stylesheet" type="text/css" href="lib/offline-v2.css">
 
-		<!-- Google tag (gtag.js) -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=G-F0V5C760K4"></script>
-		<script>
-		  window.dataLayer = window.dataLayer || [];
-		  function gtag() { dataLayer.push(arguments); }
-		  gtag('js', new Date());
-	  
-		  gtag('config', 'G-F0V5C760K4');
-		</script>
-
 
 
 	</head>
@@ -95,12 +85,13 @@ z = 1 - \exp\left(\displaystyle  \frac{u}{a}\right) - \sin v + \exp\left( \displ
 <div class="sl-block" data-block-type="math" style="width: auto; height: auto; left: 1px; top: 114.001px;" data-block-id="57fa7f87e261e2876b8001590c9fd900" data-name="math-92fd70"><div class="sl-block-content notranslate" data-math-display="true" style="z-index: 17; font-size: 55%; color: rgb(243, 243, 243);"><div class="math-input">y = r \cos v</div></div></div>
 <div class="sl-block" data-block-type="math" style="width: auto; height: auto; left: 0px; top: 156.001px;" data-block-id="46ea0c52169964a8166e7cb42e6b32f8" data-name="math-1bd8e2"><div class="sl-block-content notranslate" data-math-display="true" style="z-index: 18; font-size: 55%; color: rgb(243, 243, 243);"><div class="math-input">z = a \left(u \cos s - h \sin s\right)</div></div></div>
 <div class="sl-block" data-block-type="math" style="width: auto; height: auto; left: 19px; top: 211.001px;" data-block-id="1c371847e088530e2a323eb12aa2b252" data-name="math-6c2374"><div class="sl-block-content notranslate" data-math-display="true" style="z-index: 19; font-size: 55%; color: rgb(243, 243, 243);"><div class="math-input">0\leq u \leq \pi</div></div></div>
-<div class="sl-block" data-block-type="math" style="width: auto; height: auto; left: 19px; top: 255.001px;" data-block-id="ac5ececb4f8480241b56ce3b0485a16f" data-name="math-de5b10"><div class="sl-block-content notranslate" data-math-display="true" style="z-index: 20; font-size: 55%; color: rgb(243, 243, 243);"><div class="math-input">0\leq v \leq 17 \pi</div></div></div></section></section>
+<div class="sl-block" data-block-type="math" style="width: auto; height: auto; left: 19px; top: 255.001px;" data-block-id="ac5ececb4f8480241b56ce3b0485a16f" data-name="math-de5b10"><div class="sl-block-content notranslate" data-math-display="true" style="z-index: 20; font-size: 55%; color: rgb(243, 243, 243);"><div class="math-input">0\leq v \leq 17 \pi</div></div></div></section></section><section data-background-color="rgb(0, 0, 0)" data-id="c0a5139b83ac7c0c8fd09cb1e71c35f7" data-background-iframe="https://www.dynamicmath.xyz/threejs/rings-rotating/"><div class="sl-block" data-block-type="text" style="width: 806px; left: 237px; top: 33px; height: auto;" data-block-id="eb9ac375234c13a6e924e95642f9772b"><div class="sl-block-content" data-placeholder-tag="h1" data-placeholder-text="Title Text" style="z-index: 10; color: rgb(255, 255, 255); font-size: 40%;"><h1>More coming soon!</h1></div></div>
+</section>
 			</div>
 		</div>
 
 		<script>
-			var SLConfig = {"deck": {"id":3366233,"slug":"parametric-surfaces-gallery","title":"Parametric Surfaces - Gallery","description":"","width":1280,"height":720,"margin":0.05,"visibility":"self","published_at":null,"sanitize_messages":null,"thumbnail_url":"https://s3.amazonaws.com/media-p.slid.es/thumbnails/708585739671947d21837a28d112cd8e/thumb.jpg?1741773067","view_count":0,"user":{"id":1304482,"username":"jcponce","name":"Juan Carlos Ponce Campuzano","description":"Independent Mathematics Educator","thumbnail_url":"https://media.slid.es/avatars/1304482/bw-b-logo-twitter-geogebra_copy.jpg","account_type":"lite","team_id":null,"settings":{"id":5182188,"present_controls":true,"present_upsizing":true,"present_pointer":false,"present_notes":true,"default_deck_tag_id":null}},"background_transition":"fade","transition":"fade","theme_id":null,"theme_font":"palatino","theme_color":"black-blue","auto_slide_interval":0,"comments_enabled":false,"forking_enabled":false,"rolling_links":false,"center":false,"shuffle":false,"should_loop":false,"share_notes":false,"slide_number":false,"slide_count":12,"rtl":false,"version":2,"collaborative":null,"deck_user_editor_limit":1,"data_updated_at":1741773067274,"font_typekit":null,"font_google":null,"time_limit":null,"navigation_mode":"default","upsizing_enabled":true,"language":"en","notes":{}}};
+			var SLConfig = {"deck": {"id":3366233,"slug":"parametric-surfaces-gallery","title":"Parametric Surfaces - Gallery","description":"","width":1280,"height":720,"margin":0.05,"visibility":"self","published_at":null,"sanitize_messages":null,"thumbnail_url":"https://s3.amazonaws.com/media-p.slid.es/thumbnails/708585739671947d21837a28d112cd8e/thumb.jpg?1741773067","view_count":0,"user":{"id":1304482,"username":"jcponce","name":"Juan Carlos Ponce Campuzano","description":"Independent Mathematics Educator","thumbnail_url":"https://media.slid.es/avatars/1304482/bw-b-logo-twitter-geogebra_copy.jpg","account_type":"lite","team_id":null,"settings":{"id":5182188,"present_controls":true,"present_upsizing":true,"present_pointer":false,"present_notes":true,"default_deck_tag_id":null}},"background_transition":"fade","transition":"fade","theme_id":null,"theme_font":"palatino","theme_color":"black-blue","auto_slide_interval":0,"comments_enabled":false,"forking_enabled":false,"rolling_links":false,"center":false,"shuffle":false,"should_loop":false,"share_notes":false,"slide_number":false,"slide_count":13,"rtl":false,"version":2,"collaborative":null,"deck_user_editor_limit":1,"data_updated_at":1741781160066,"font_typekit":null,"font_google":null,"time_limit":null,"navigation_mode":"default","upsizing_enabled":true,"language":"en","notes":{}}};
 
 
 			// Use local fonts
