--- a/parametric-surfaces-gallery/index.html
+++ b/parametric-surfaces-gallery/index.html
@@ -10,6 +10,15 @@
 		<link rel="manifest" href='data:application/manifest+json,{"display": "standalone", "name": "Parametric Surfaces - Gallery"}' />
 		<title>Parametric Surfaces - Gallery</title>
 
+		<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-F0V5C760K4"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag() { dataLayer.push(arguments); }
+		  gtag('js', new Date());
+	  
+		  gtag('config', 'G-F0V5C760K4');
+		</script>
 
 		<link rel="stylesheet" type="text/css" href="lib/offline-v2.css">
 
@@ -112,7 +121,7 @@ z = 1 - \exp\left(\displaystyle  \frac{u}{a}\right) - \sin v + \exp\left( \displ
 
 				hash: true,
 				controls: true,
-				progress: true,
+				progress: false,
 				mouseWheel: false,
 				showNotes: false,
 				slideNumber: false,
