--- a/applets/threejs/3d-surfaces/index.html
+++ b/applets/threejs/3d-surfaces/index.html
@@ -10,6 +10,8 @@
 
 <body>
     <canvas class="webgl"></canvas>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/gsap.min.js"></script>
+    
     <script src="https://cdn.jsdelivr.net/npm/lil-gui@0.18"></script>
     <!-- using three.js -->
     <script async src="https://ga.jspm.io/npm:es-module-shims@1.6.3/dist/es-module-shims.js"
