--- a/parametric-surfaces-gallery/index.html
+++ b/parametric-surfaces-gallery/index.html
@@ -138,8 +138,8 @@ z = 1 - \exp\left(\displaystyle  \frac{u}{a}\right) - \sin v + \exp\left( \displ
 				
 
 				hash: true,
-				controls: false,
-				progress: true,
+				controls: true,
+				progress: false,
 				mouseWheel: false,
 				showNotes: false,
 				slideNumber: false,
